@@ -65,8 +65,6 @@ class IntroductionsController extends Controller
 
         $contact->save();
 
-        $contact->logEvent('contact', $contact->id, 'update');
-
         return redirect()->route('people.show', $contact)
             ->with('success', trans('people.introductions_update_success'));
     }
@@ -81,8 +79,6 @@ class IntroductionsController extends Controller
     public function destroy(Contact $contact, Gift $gift)
     {
         $gift->delete();
-
-        $contact->events()->forObject($gift)->get()->each->delete();
 
         return redirect()->route('people.show', $contact)
             ->with('success', trans('people.gifts_delete_success'));
