@@ -4,6 +4,7 @@ UNRELEASED CHANGES:
 * Add ability to define the default email address used for support
 * Fix confirm email sent when signup_double_optin is false
 * Fix now() without timezone functions
+* Remove notion of events
 
 RELEASED VERSIONS:
 
